--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,74 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.logo {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+li {
+  cursor: pointer;
+  padding: 10px;
+}
+
+li:hover {
+  background-color: #f0f0f0;
+}
+
+.spinner {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.spinner .one {
+  margin-right: 3px;
+  width: 10px;
+  height: 60px;
+  background-color: blueviolet;
+  animation: left 1s linear infinite;
+}
+
+.spinner .two {
+  margin-left: 3px;
+  width: 10px;
+  height: 60px;
+  background-color: blueviolet;
+  animation: right 1s linear infinite;
+}
+
+@keyframes left {
+  0% {
+    transform: translateY(-50%);
+  }
+
+  50% {
+    transform: translateY(50%);
+  }
+
+  100% {
+    transform: translateY(-50%);
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+@keyframes right {
+  0% {
+    transform: translateY(50%);
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  50% {
+    transform: translateY(-50%);
+  }
+
+  100% {
+    transform: translateY(50%);
   }
 }
